--- a/LlamaIndex_framework_with_Astra_plus_observability_kcp.ipynb
+++ b/LlamaIndex_framework_with_Astra_plus_observability_kcp.ipynb
@@ -21,7 +21,7 @@
         "Create a Vector Store with Llama index and CassIO, with NBA data to use as a search engine and text generator, backed by Astra DB. Demonstrate multiple Llama index modules and question answering using the framework, including a Gradio Web Interface.\n",
         "\n",
         "New as of 10/12/23:\n",
-        " - Added additional team(s) to the result set\n",
+        " - Added additional team(s) to the dataset\n",
         " - Add observability\n",
         "    - Specifically added Weights & Biases Prompts - a suite of LLMOps tools built for the development of LLM-powered applications.\n",
         "\n",
