--- a/LlamaIndexGradioApp/LlamaIndex_Gradio_App_kcp.ipynb
+++ b/LlamaIndexGradioApp/LlamaIndex_Gradio_App_kcp.ipynb
@@ -6,7 +6,7 @@
         "id": "G7k44CpJhHV2"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/awesome-astra/docs/blob/main/docs/pages/tools/notebooks/Retrieval_Augmented_Generation_(for_AI_Chatbots).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/drive/1kPpIAdLSKE6UADlXY71VsX-Hnfz8a1F1?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ],
       "id": "G7k44CpJhHV2"
     },
